// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar menu closed should match snapshot 1`] = `
.c0 {
  margin-right: 8px;
  position: relative;
  z-index: 20;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c0 button:focus {
  outline: 0;
}

.c0 .nav__menu {
  height: 20px;
  width: 25px;
}

.c0 .nav__menu > * {
  -webkit-transition: fill 0.3s ease;
  transition: fill 0.3s ease;
}

.c0 ul {
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
  margin: 0;
  list-style: none;
  padding: 10px;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 97% 2%;
  -ms-transform-origin: 97% 2%;
  transform-origin: 97% 2%;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: all;
  transition-property: all;
}

.c0 li {
  padding: 2px 5px;
  text-transform: uppercase;
}

.c0 a {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c0 a:after {
  content: '';
  display: block;
  height: 1px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: width;
  transition-property: width;
  width: 0px;
}

.c0 a:focus {
  outline: none;
}

.c0 a:focus:after,
.c0 a:hover:after,
.c0 a:active:after {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-label="navigation menu"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 fa-lg fa-rotate-null fa-pull-null nav__menu"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
    </button>
    <ul
      style="transform: scale(0);"
    >
      <li>
        <a
          href="/analysis"
        >
          analysis
        </a>
      </li>
      <li>
        <a
          href="/help"
        >
          help
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Navbar menu open should match snapshot 1`] = `
.c0 {
  margin-right: 8px;
  position: relative;
  z-index: 20;
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c0 button:focus {
  outline: 0;
}

.c0 .nav__menu {
  height: 20px;
  width: 25px;
}

.c0 .nav__menu > * {
  -webkit-transition: fill 0.3s ease;
  transition: fill 0.3s ease;
}

.c0 ul {
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.3);
  margin: 0;
  list-style: none;
  padding: 10px;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: 97% 2%;
  -ms-transform-origin: 97% 2%;
  transform-origin: 97% 2%;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: all;
  transition-property: all;
}

.c0 li {
  padding: 2px 5px;
  text-transform: uppercase;
}

.c0 a {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c0 a:after {
  content: '';
  display: block;
  height: 1px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: width;
  transition-property: width;
  width: 0px;
}

.c0 a:focus {
  outline: none;
}

.c0 a:focus:after,
.c0 a:hover:after,
.c0 a:active:after {
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-label="navigation menu"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 fa-lg fa-rotate-null fa-pull-null nav__menu"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
    </button>
    <ul
      style="transform: scale(1);"
    >
      <li>
        <a
          href="/analysis"
        >
          analysis
        </a>
      </li>
      <li>
        <a
          href="/help"
        >
          help
        </a>
      </li>
    </ul>
  </div>
</div>
`;
